<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.sabre.liberty.fitnesse</groupId>
   <artifactId>fitnesse-all</artifactId>
   <name>fitnesse-all</name>
   <description>The fully integrated standalone wiki, and acceptance testing framework.</description>
   <dependencies>
   </dependencies>
   <packaging>pom</packaging>
   <version>20090627</version>
   <scm>
      <connection>scm:svn:svn://liberty.sabre.com/utilities/fitnesse-liberty</connection>
      <developerConnection>scm:svn:svn://liberty.sabre.com/utilities/fitnesse-liberty</developerConnection>
      <url>http://liberty.sabre.com/svn/utilities/fitnesse-liberty</url>
   </scm>
   <modules> 
      <module>fitnesse</module>
      <module>fitnesse-teamcity</module>
      <module>fitnesse-rc</module>
   </modules>
   <properties>
      <jdk.version>1.6</jdk.version>
   </properties>
   
   <dependencyManagement>
      <dependencies>
         <dependency>
            <groupId>org.fitnesse</groupId>
            <artifactId>fitnesse</artifactId>
            <version>20090627</version>
         </dependency>
         <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>5.9</version>
         </dependency>
      </dependencies>
   </dependencyManagement>

   <build>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
         </plugin>

         <!-- Retrieve the current workspace revision and store it under ${buildNumber} -->
         <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>buildnumber-maven-plugin</artifactId>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-jar-plugin</artifactId>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
         </plugin>
         <!--<plugin>-->
         <!--<groupId>com.sabre.liberty</groupId>-->
         <!--<artifactId>cobertura-maven-plugin</artifactId>-->
         <!--</plugin>-->
         <plugin>
            <artifactId>maven-release-plugin</artifactId>
            <!--<configuration>-->
            <!--<tagBase>https://svn.apache.org/repos/asf/maven/components/releases</tagBase>-->
            <!--</configuration>-->
         </plugin>
      </plugins>

      <pluginManagement>
         <plugins>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-compiler-plugin</artifactId>
               <configuration>
                  <source>${jdk.version}</source>
                  <target>${jdk.version}</target>
               </configuration>
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-surefire-plugin</artifactId>
               <configuration>
                  <forkMode>once</forkMode>
                  <!-- Add -verbose:class to trace what jar a class was loaded from -->
                  <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m</argLine>
                  <!-- Instrumented classes should by used for testing !  -->
                  <classesDirectory>target/generated-classes/cobertura</classesDirectory>
                  <classesDirectory>target/classes</classesDirectory>
                  <includes>
                     <include>**/Test*.java</include>
                     <include>**/*Test.java</include>
                  </includes>
               </configuration>
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-dependency-plugin</artifactId>
            </plugin>

            <!-- Retrieve the current workspace revision and store it under ${buildNumber} -->
            <plugin>
               <groupId>org.codehaus.mojo</groupId>
               <artifactId>buildnumber-maven-plugin</artifactId>
               <version>1.0-beta-3-SNAPSHOT</version>
               <configuration>
                  <doCheck>false</doCheck>
                  <doUpdate>false</doUpdate>
                  <timestampFormat>{0,date,yyyy-MM-dd HH:mm:ss}</timestampFormat>
                  <getRevisionOnlyOnce>true</getRevisionOnlyOnce>
                  <providerImplementations>
                     <svn>javasvn</svn>
                  </providerImplementations>
                  <revisionOnScmFailure>Unknown (not built from svn)</revisionOnScmFailure>
               </configuration>
               <executions>
                  <execution>
                     <!--<phase>prepare-package</phase>-->
                     <phase>validate</phase>
                     <!-- since prepare-package is only available in maven 2.1 and maven 2.0.9 does not
                     run the plugin bound to the same phase in their declaration order we pick the
                     first phase before package so the buildNumber is ready before the jar is
                     created-->
                     <goals>
                        <goal>create</goal>
                     </goals>
                  </execution>
               </executions>
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-jar-plugin</artifactId>
               <version>2.1</version>
               <configuration>
                  <archive>
                     <manifest>
                        <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                        <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                     </manifest>
                     <manifestEntries>
                        <Implementation-Description>${description}</Implementation-Description>
                        <Scm-Location>${scm.connection}</Scm-Location>
                        <Scm-Revision>r${buildNumber}</Scm-Revision>
                        <Built-On>${timestamp}</Built-On>
                     </manifestEntries>
                     <!--<manifestFile>${build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>-->
                  </archive>
               </configuration>
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-source-plugin</artifactId>
               <executions>
                  <execution>
                     <goals>
                        <goal>jar</goal>
                        <!--<goal>test-jar</goal>-->
                     </goals>
                  </execution>
               </executions>
            </plugin>
            <plugin>
               <groupId>com.sabre.liberty</groupId>
               <artifactId>cobertura-maven-plugin</artifactId>
               <version>2.2-PATCHED-U1</version>
               <executions>
                  <execution>
                     <id>cobertura-instrument</id>
                     <phase>test-compile</phase>
                     <goals>
                        <goal>instrument</goal>
                     </goals>
                  </execution>
                  <execution>
                     <goals>
                        <goal>clean</goal>
                        <goal>check</goal>
                     </goals>
                  </execution>
               </executions>
               <configuration>
                  <instrumentation>
                     <ignoreTrivial>true</ignoreTrivial>
                     <ignoreMethods>
                        <ignoreMethod>main</ignoreMethod>
                     </ignoreMethods>
                  </instrumentation>
                  <check>
                     <branchRate>0</branchRate>
                     <lineRate>0</lineRate>
                     <packageLineRate>0</packageLineRate>
                     <packageBranchRate>0</packageBranchRate>
                     <totalLineRate>0</totalLineRate>
                     <totalBranchRate>0</totalBranchRate>
                     <haltOnFailure>false</haltOnFailure>
                  </check>
               </configuration>
            </plugin>

            <plugin>
               <inherited>true</inherited>
               <groupId>org.codehaus.groovy.maven</groupId>
               <artifactId>gmaven-plugin</artifactId>
               <version>1.0-rc-3</version>
               <executions>
                  <execution>
                     <goals>
                        <goal>generateStubs</goal>
                        <goal>compile</goal>
                        <goal>generateTestStubs</goal>
                        <goal>testCompile</goal>
                     </goals>
                  </execution>
               </executions>
            </plugin>

            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-dependency-plugin</artifactId>
               <executions>
                  <execution>
                     <id>copy</id>
                     <phase>install</phase>
                     <goals>
                        <goal>copy</goal>
                     </goals>
                     <configuration>
                        <artifactItems>
                           <artifactItem>
                              <groupId>${project.groupId}</groupId>
                              <artifactId>${project.artifactId}</artifactId>
                              <version>${project.version}</version>
                              <type>jar</type>
                              <overWrite>true</overWrite>
                           </artifactItem>
                        </artifactItems>
                        <outputDirectory>../fitnesse/lib</outputDirectory>
                        <overWriteReleases>true</overWriteReleases>
                        <overWriteSnapshots>true</overWriteSnapshots>
                     </configuration>
                  </execution>
               </executions>
            </plugin>
         </plugins>
      </pluginManagement>
   </build>
   <reporting>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-checkstyle-plugin</artifactId>
            <configuration>
               <configLocation>checkstyle.xml</configLocation>
               <suppressionsLocation>suppressions.xml</suppressionsLocation>
               <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
               <failOnViolation>true</failOnViolation>
               <violationSeverity>warning</violationSeverity>
            </configuration>
         </plugin>
         <!--
                  <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-pmd-plugin</artifactId>
                     <configuration>
                        <targetJdk>${jdk.version}</targetJdk>
                     </configuration>
                  </plugin>
         -->
         <plugin>
            <groupId>com.sabre.liberty</groupId>
            <artifactId>cobertura-maven-plugin</artifactId>
            <version>2.2-PATCHED-U1</version>
         </plugin>
         <!--
                  <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>jdepend-maven-plugin</artifactId>
                  </plugin>
         -->
      </plugins>
   </reporting>
</project>
